--- a/src/SetHenkousha/Views/MainSetHenkosha.xaml
+++ b/src/SetHenkousha/Views/MainSetHenkosha.xaml
@@ -1,51 +1,39 @@
-﻿<UserControl x:Class="SelDistGroupLib.Views.SelDistGroupDlg"
+﻿<UserControl x:Class="SetHenkosha.Views.MainSetHenkosha"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mah="http://metro.mahapps.com/winfx/xaml/shared"
              xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
              prism:ViewModelLocator.AutoWireViewModel="True"
              HorizontalAlignment="Center" VerticalAlignment="Center"
              Loaded="UserControl_Loaded"
-             Width="500">
-
-    <prism:Dialog.WindowStyle>
-        <Style TargetType="Window" BasedOn="{StaticResource DialogWindow}">
-        </Style>
-    </prism:Dialog.WindowStyle>
+             Width="600">
 
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Margin="5">
             <Grid Margin="0" Visibility="{Binding LineVisiblity}">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="6*"/>
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="12*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="3*"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Text="仕分グループ:" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" 
+                <TextBlock Grid.Column="0" Text="社員コード:" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" 
                            Width="140" Margin="3"/>
-                <ComboBox x:Name="DistGroup" Grid.Column="1" SelectedItem="{Binding DistGroup}" ItemsSource="{Binding DistGroupCombo}" Margin="3" 
-                          IsEditable="True" TextSearch.TextPath="CD_DIST_GROUP" b:ComboBoxBehavior.MaxLength="5">
+                <ComboBox x:Name="Shain" Grid.Column="1" SelectedItem="{Binding Shain}" ItemsSource="{Binding ShainCombo}" Margin="3" 
+                          IsEditable="True" TextSearch.TextPath="CD_SHAIN" b:ComboBoxBehavior.MaxLength="7">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding CD_DIST_GROUP}" />
+                                <TextBlock Text="{Binding CD_SHAIN}" />
                                 <TextBlock Text="  "/>
-                                <TextBlock Text="{Binding NM_DIST_GROUP}"/>
+                                <TextBlock Text="{Binding NM_SHAIN}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <TextBlock Grid.Column="2" Text="{Binding DistGroup.NM_DIST_GROUP}" VerticalAlignment="Center" Margin="20 0 0 0" />
+                <TextBlock Grid.Column="2" Text="{Binding Shain.NM_SHAIN}" VerticalAlignment="Center" Margin="20 0 0 0" />
             </Grid>
-
-            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="20,5,5,5" Visibility="{Binding ShipDtVisiblity}">
-                <TextBlock Grid.Column="0" Text="納品日:" VerticalAlignment="Center" TextAlignment="Center" 
-                           Width="110" Margin="3"/>
-                <DatePicker Grid.Column="1" SelectedDate="{Binding DT_DELIVERY}" PreviewKeyDown="DatePicker_PreviewKeyDown" Language="ja"/>
-            </StackPanel>
 
             <TextBlock Grid.Row="2" Text="{Binding ErrorMessage}" Foreground="Red" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
         </StackPanel>
