仕分グループ登録:入力画面のFontSizeを統一

--- a/src/DistGroup/Views/InputDistGroup.xaml
+++ b/src/DistGroup/Views/InputDistGroup.xaml
@@ -218,7 +218,7 @@
                     <DataGrid Grid.Row="1" x:Name="dataGrid" ItemsSource="{Binding Batches}" AutoGenerateColumns="False"
                               IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                               SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
-                              Style="{StaticResource MaterialDesignDataGrid}" Margin="3">
+                              Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
                         <DataGrid.ColumnHeaderStyle>
                             <Style TargetType="DataGridColumnHeader">
                                 <Setter Property="Background" Value="LightGray"/>
@@ -283,7 +283,7 @@
                     <DataGrid Grid.Row="1" x:Name="dataGrid2" ItemsSource="{Binding Logs}" AutoGenerateColumns="False"
                               IsReadOnly="True" VerticalScrollBarVisibility="Visible" IsSynchronizedWithCurrentItem="True"
                               SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
-                              Style="{StaticResource MaterialDesignDataGrid}" Margin="3">
+                              Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
                         <DataGrid.ColumnHeaderStyle>
                             <Style TargetType="DataGridColumnHeader">
                                 <Setter Property="Background" Value="LightGray"/>
@@ -373,7 +373,7 @@
                         <DataGrid Grid.Column="1" x:Name="dataGrid3" ItemsSource="{Binding Courses}" AutoGenerateColumns="False"
                                   IsReadOnly="True" VerticalScrollBarVisibility="Visible" IsSynchronizedWithCurrentItem="True"
                                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
-                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3">
+                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
                             <DataGrid.ColumnHeaderStyle>
                                 <Style TargetType="DataGridColumnHeader">
                                     <Setter Property="Background" Value="LightGray"/>
