--- a/src/lib/WindowLib/Resources/Standard.xaml
+++ b/src/lib/WindowLib/Resources/Standard.xaml
@@ -49,6 +49,12 @@
         <Setter Property="SizeToContent" Value="WidthAndHeight"/>
         <Setter Property="FontSize" Value="24" />
     </Style>
+    
+    <Style x:Key="InputDialog" TargetType="Window">
+        <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterScreen" />
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="WindowState" Value="Maximized"/>
+    </Style>
 
     <Style x:Key="StackPanelDocTop" TargetType="StackPanel" >
         <Setter Property="Margin" Value="3"/>
