座席しきい値情報登録：新規作成

--- a/src/SeatThreshold/Views/InputSeatThresholdDlg.xaml
+++ b/src/SeatThreshold/Views/InputSeatThresholdDlg.xaml
@@ -6,10 +6,12 @@
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             Width="1400" Height="800">
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+             xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
+             Loaded="UserControl_Loaded">
 
     <prism:Dialog.WindowStyle>
-        <Style TargetType="Window" BasedOn="{StaticResource DialogWindow}"/>
+        <Style TargetType="Window" BasedOn="{StaticResource InputDialog}"/>
     </prism:Dialog.WindowStyle>
 
     <UserControl.Resources>
@@ -113,7 +115,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="参照日"/>
-                    <TextBox Grid.Column="1" Text="{Binding Date, StringFormat=yyyy/MM/dd}"/>
+                    <DatePicker Grid.Column="1" SelectedDate="{Binding ReferenceDate}"/>
                     <Button Grid.Column="2" Content="参照" Command="{Binding Refer}" Margin="3"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
                 </Grid>
@@ -126,7 +128,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="拠点コード" VerticalContentAlignment="Center"/>
-                    <TextBox Grid.Column="1" Text="{Binding CdKyoten}"/>
+                    <TextBox x:Name="CdKyoten" Grid.Column="1" Text="{Binding CdKyoten, UpdateSourceTrigger=PropertyChanged, Delay=300}" MaxLength="4" InputMethod.IsInputMethodEnabled="False" IsEnabled="{Binding IsAdd}"/>
                     <Label Grid.Column="2" Background="Blue"/>
                     <TextBlock Grid.Column="2" Text="{Binding NmKyoten}" Foreground="White"/>
                 </Grid>
@@ -139,7 +141,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="ブロック"/>
-                    <TextBox Grid.Column="1" Text="{Binding CdBlock}"/>
+                    <TextBox Grid.Column="1" Text="{Binding CdBlock}" MaxLength="2" IsEnabled="{Binding IsAdd}"/>
                 </Grid>
 
                 <Grid Grid.Row="3">
@@ -150,7 +152,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="種別"/>
-                    <RadioButton Grid.Column="1" Content="天吊り" Margin="3" FontSize="18"
+                    <RadioButton x:Name="TdUnitType" Grid.Column="1" Content="天吊り" Margin="3" FontSize="18"
                                      IsChecked="{Binding TdUnitType, Mode=TwoWay, Converter={StaticResource Enum}, ConverterParameter=TdCeiling}"/>
                     <RadioButton Grid.Column="2" Content="棚" Margin="3" FontSize="18"
                                      IsChecked="{Binding TdUnitType, Mode=TwoWay, Converter={StaticResource Enum}, ConverterParameter=TdRack}"/>
@@ -166,11 +168,11 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="適用開始日・無効日"/>
-                    <TextBox Grid.Column="1" Text="{Binding DtTekiyoKaishi, StringFormat=yyyy/MM/dd}"
-                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left"/>
+                    <DatePicker Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}"
+                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                     <Label Grid.Column="2" Content="～" HorizontalAlignment="Center"/>
-                    <TextBox Grid.Column="3" Text="{Binding DtTekiyoMuko, StringFormat=yyyy/MM/dd}"
-                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left"/>
+                    <DatePicker Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}"
+                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                     <Button Grid.Column="4" Content="解除" Command="{Binding Release}" Margin="3"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}"/>
                 </Grid>
@@ -215,7 +217,11 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="表示器数"/>
-                    <TextBox Grid.Column="1" Text="{Binding NuTdunitCnt}"/>
+                    <TextBox x:Name="NuTdunitCnt" Grid.Column="1" Text="{Binding NuTdunitCnt, UpdateSourceTrigger=PropertyChanged}" MaxLength="4" InputMethod.IsInputMethodEnabled="False" HorizontalContentAlignment="Right">
+                        <i:Interaction.Behaviors>
+                            <b:NumericTextBoxBehavior/>
+                        </i:Interaction.Behaviors>
+                    </TextBox>
                 </Grid>
 
                 <Grid Grid.Row="9">
@@ -226,7 +232,11 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="しきい値"/>
-                    <TextBox Grid.Column="1" Text="{Binding NuThreshold}"/>
+                    <TextBox Grid.Column="1" Text="{Binding NuThreshold, UpdateSourceTrigger=PropertyChanged}" MaxLength="4" InputMethod.IsInputMethodEnabled="False" HorizontalContentAlignment="Right">
+                        <i:Interaction.Behaviors>
+                            <b:NumericTextBoxBehavior/>
+                        </i:Interaction.Behaviors>
+                    </TextBox>
                 </Grid>
             </Grid>
 
@@ -245,7 +255,7 @@
 
                     <Label Grid.Row="0" Content="【履歴表示】" FontSize="18" Margin="3" VerticalContentAlignment="Center"/>
                     <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid2}" SettingsKey="InputLogColumns"/>
-                    <DataGrid Grid.Row="1" x:Name="dataGrid2" ItemsSource="{Binding Logs}" AutoGenerateColumns="False"
+                    <DataGrid Grid.Row="1" x:Name="dataGrid2" ItemsSource="{Binding ReferenceLog.LogInfos}" AutoGenerateColumns="False"
                               IsReadOnly="True" VerticalScrollBarVisibility="Visible" IsSynchronizedWithCurrentItem="True"
                               SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
                               Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
@@ -263,7 +273,7 @@
                             <DataGridTextColumn Header="選択" Binding="{Binding DispSelected}" Width="0.3*"
                                                 ElementStyle="{StaticResource CenterTextElement}"/>
 
-                            <DataGridTextColumn Header="適用開始日" Binding="{Binding DtTekiyoKaishi}" Width="1*">
+                            <DataGridTextColumn Header="適用開始日" Binding="{Binding StartDate}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
@@ -278,7 +288,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
 
-                            <DataGridTextColumn Header="適用無効日" Binding="{Binding DtTekiyoMuko}" Width="1*">
+                            <DataGridTextColumn Header="適用無効日" Binding="{Binding EndDate}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
@@ -293,7 +303,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
 
-                            <DataGridTextColumn Header="変更者" Binding="{Binding CdShain}" Width="1*">
+                            <DataGridTextColumn Header="変更者" Binding="{Binding ShainCode}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
