--- a/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
+++ b/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
@@ -6,7 +6,8 @@
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             Width="1400" Height="800">
+             Width="1400" Height="800"
+             Loaded="UserControl_Loaded">
 
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window" BasedOn="{StaticResource DialogWindow}"/>
@@ -19,14 +20,9 @@
     </UserControl.Resources>
 
     <DockPanel>
-        <ToolBarTray DockPanel.Dock="Top">
-            <ToolBar ClipToBounds="False">
+        <ToolBarTray DockPanel.Dock="Top" Focusable="False">
+            <ToolBar ClipToBounds="False" Focusable="False" KeyboardNavigation.TabNavigation="None">
                 <ToolBar.Resources>
-                    <Style TargetType="Button">
-                        <Setter Property="Focusable" Value="False"/>
-                        <Setter Property="Margin" Value="1"/>
-                        <Setter Property="Padding" Value="5"/>
-                    </Style>
                     <Style TargetType="materialDesign:PackIcon">
                         <Setter Property="VerticalContentAlignment" Value="Center"/>
                         <Setter Property="Margin" Value="1"/>
@@ -41,21 +37,21 @@
                     </Style>
                 </ToolBar.Resources>
 
-                <Button Command="{Binding Clear}">
+                <Button Command="{Binding ClearCommand}">
                     <StackPanel Orientation="Vertical">
                         <materialDesign:PackIcon Kind="Clear"/>
                         <TextBlock Text="クリア"/>
                     </StackPanel>
                 </Button>
 
-                <Button Command="{Binding Register}">
+                <Button Command="{Binding RegistCommand}">
                     <StackPanel Orientation="Vertical">
                         <materialDesign:PackIcon Kind="Edit"/>
                         <TextBlock Text="登録"/>
                     </StackPanel>
                 </Button>
 
-                <Button Command="{Binding Back}">
+                <Button Command="{Binding BackCommand}">
                     <StackPanel Orientation="Vertical">
                         <materialDesign:PackIcon Kind="ExitToApp"/>
                         <TextBlock Text="戻る"/>
@@ -105,14 +101,15 @@
                 <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="参照日"/>
-                    <TextBox Grid.Column="1" Text="{Binding Date, StringFormat=yyyy/MM/dd}"/>
-                    <Button Grid.Column="2" Content="参照" Command="{Binding Refer}" Margin="3"
-                            Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
+                    <StackPanel Orientation="Horizontal" Grid.Column="1">
+                        <DatePicker SelectedDate="{Binding ReferenceDate}" Language="ja" Width="200" x:Name="ReferenceDate"/>
+                        <Button Grid.Column="2" Content="参照" Command="{Binding ReferCommand}" Margin="3"
+                                Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
+                    </StackPanel>
                 </Grid>
 
                 <Grid Grid.Row="1">
@@ -122,8 +119,9 @@
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Grid.Column="0" Content="拠点コード" VerticalContentAlignment="Center"/>
-                    <TextBox Grid.Column="1" Text="{Binding CdKyoten}"/>
+                    <Label Grid.Column="0" Content="拠点コード" VerticalContentAlignment="Center" />
+                    <TextBox Grid.Column="1" x:Name="CdKyoten" Text="{Binding CdKyoten, UpdateSourceTrigger=PropertyChanged, Delay=100}" IsEnabled="{Binding IsAdd}"
+                                 MaxLength="4"/>
                     <Label Grid.Column="2" Background="Blue"/>
                     <TextBlock Grid.Column="2" Text="{Binding NmKyoten}" Foreground="White"/>
                 </Grid>
@@ -136,8 +134,9 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="大仕分グループ"/>
-                    <TextBox Grid.Column="1" Text="{Binding CdLargeGroup}"/>
-                    <TextBox Grid.Column="2" Text="{Binding CdLargeGroupName}"/>
+                    <TextBox Grid.Column="1" Text="{Binding CdLargeGroup,UpdateSourceTrigger=PropertyChanged}" MaxLength="3"
+                             IsEnabled="{Binding IsAdd}"/>
+                    <TextBox Grid.Column="2" Text="{Binding CdLargeGroupName,UpdateSourceTrigger=PropertyChanged}" MaxLength="40"/>
                 </Grid>
 
                 <Grid Grid.Row="3">
@@ -150,13 +149,13 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="適用開始日・無効日"/>
-                    <TextBox Grid.Column="1" Text="{Binding DtTekiyoKaishi, StringFormat=yyyy/MM/dd}"
-                             HorizontalAlignment="Stretch" HorizontalContentAlignment="Left"/>
+                    <DatePicker Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}" Language="ja"
+                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease,UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Column="2" Content="～" HorizontalAlignment="Center"/>
-                    <TextBox Grid.Column="3" Text="{Binding DtTekiyoMuko, StringFormat=yyyy/MM/dd}"
-                             HorizontalAlignment="Stretch" HorizontalContentAlignment="Left"/>
-                    <Button Grid.Column="4" Content="解除" Command="{Binding Release}" Margin="3"
-                            Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}"/>
+                    <DatePicker Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}"
+                                 HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease,UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Grid.Column="4" Content="解除" Command="{Binding ReleaseCommand}" Margin="3" Focusable="False"
+                                Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}"/>
                 </Grid>
 
                 <Grid Grid.Row="4">
@@ -185,10 +184,10 @@
                     <Label Grid.Column="0" Content="更新者"/>
 
                     <Label Grid.Column="1" Background="Blue"/>
-                    <TextBlock Grid.Column="1" Text="{Binding CdShain}" Foreground="White"/>
+                    <TextBlock Grid.Column="1" Text="{Binding CdHenkosha}" Foreground="White"/>
 
                     <Label Grid.Column="2" Background="Blue"/>
-                    <TextBlock Grid.Column="2" Text="{Binding NmShain}" Foreground="White"/>
+                    <TextBlock Grid.Column="2" Text="{Binding NmHenkosha}" Foreground="White"/>
                 </Grid>
             </Grid>
 
@@ -207,7 +206,7 @@
 
                     <Label Grid.Row="0" Content="【履歴表示】" FontSize="18" Margin="3" VerticalContentAlignment="Center"/>
                     <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid2}" SettingsKey="InputLogColumns"/>
-                    <DataGrid Grid.Row="1" x:Name="dataGrid2" ItemsSource="{Binding Logs}" AutoGenerateColumns="False"
+                    <DataGrid Grid.Row="1" x:Name="dataGrid2" ItemsSource="{Binding ReferenceLog.LogInfos}" AutoGenerateColumns="False"
                               IsReadOnly="True" VerticalScrollBarVisibility="Visible" IsSynchronizedWithCurrentItem="True"
                               SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All"
                               Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
@@ -222,10 +221,20 @@
                         </DataGrid.ColumnHeaderStyle>
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="選択" Binding="{Binding DispSelected}" Width="0.3*"
-                                                ElementStyle="{StaticResource CenterTextElement}"/>
+                            <DataGridTextColumn Header="選択" Width="0.3*" Binding="{Binding DispSelected}"
+                                                ElementStyle="{StaticResource CenterTextElement}">
+                                <DataGridTextColumn.CellStyle>
+                                    <Style TargetType="DataGridCell">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Selected}" Value="False">
+                                                <Setter Property="Content" Value="ABC"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </DataGridTextColumn.CellStyle>
+                            </DataGridTextColumn>
 
-                            <DataGridTextColumn Header="適用開始日" Binding="{Binding DtTekiyoKaishi}" Width="1*">
+                            <DataGridTextColumn Header="適用開始日" Binding="{Binding StartDate}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
@@ -240,7 +249,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
 
-                            <DataGridTextColumn Header="適用無効日" Binding="{Binding DtTekiyoMuko}" Width="1*">
+                            <DataGridTextColumn Header="適用無効日" Binding="{Binding EndDate}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
@@ -255,7 +264,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
 
-                            <DataGridTextColumn Header="変更者" Binding="{Binding CdShain}" Width="1*">
+                            <DataGridTextColumn Header="変更者" Binding="{Binding ShainCode}" Width="1*">
                                 <DataGridTextColumn.CellStyle>
                                     <Style TargetType="DataGridCell">
                                         <Setter Property="Background" Value="Blue"/>
